test/types/sync/ferguson/sync-bytes.good
sync-bytes.chpl:1: error: sync/single types cannot contain type 'bytes'
