test/types/sync/ferguson/sync-bytes.chpl
var x: sync bytes;

x.writeEF(b"hi "*23);

writeln(x.readFE());
